gcc/testsuite/rust/rustc/ui/error-codes/E0438.rs
trait Bar {}

impl Bar for i32 {
    const BAR: bool = true; // { dg-error ".E0438." "" { target *-*-* } }
}

fn main () {
}

